--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div class="content">
-        <img src="1.png" alt="Pudge" width="200px" height="200px">
-        <div>
+        <img src="1.png" alt="Pudge" width="150px" height="200px">
+        <div class="test">
             <h1>Ромасенко Глеб Геннадьевич</h1>
-            <p><b>Адрес:</b>ул. Сони Кривой 50А</p>
-            <p><b>Опыт работы:</b>нет</p>
-            <p><b>Телефон:</b>+7220162194</p>
+            <p><b>Адрес:</b> ул. Сони Кривой 50А</p>
+            <p><b>Опыт работы:</b> Нет</p>
+            <p><b>Место учебы:</b> ЮУрГУ</p>
+            <p><b>Телефон:</b> +7220162194</p>
         </div>
     </div>
     <h2>
@@ -31,35 +32,35 @@
         </tr>
         <tr>
             <td>Отличное владение</td>
-            <td>Да</td>
-            <td>Да</td>
-            <td></td>
-            <td></td>
-            <td>нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
         </tr>
         <tr>
             <td>Хорошее владение</td>
-            <td>Да</td>
-            <td>Да</td>
-            <td></td>
-            <td>нет</td>
-            <td>Да</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
         </tr>
         <tr>
             <td>Среднее владение</td>
+            <td>Нет</td>
             <td>Да</td>
             <td>Да</td>
-            <td>нет</td>
-            <td></td>
-            <td></td>
+            <td>Нет</td>
+            <td>Нет</td>
         </tr>
         <tr>
             <td>Плохое владение</td>
             <td>Да</td>
-            <td>нет</td>
-            <td>Да</td>
-            <td>Да</td>
-            <td>Да</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
+            <td>Нет</td>
         </tr>
     </table>
 
@@ -75,9 +76,7 @@
     </div>
     <script src="main.js"></script>
     <center><button onclick="toggleVisibility()"><h1>Кликните сюда, чтобы узнать меня подробнее</h1></button></center>
-    <div id="hiddenDiv" class="option">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiatnulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptate
+    <div id="hiddenDiv" class="option">Я, Ромасенко Глеб Геннадьевич, учусь на втором курсе направления "Прикладная математика и информатика" в Южно-Уральском Государственном Университете. У меня есть опыт работы с различными инструментами разработки, такими как WSL и VS Code, и я умею управлять проектами с использованием систем контроля версий, таких как Git и GitHub. Я программирую на нескольких языках, активно развивая навыки в области объектно-ориентированного программирования, создания алгоритмов и работы с данными. В процессе обучения я осваиваю разработку программного обеспечения и решение прикладных задач, связанных с математическим моделированием и анализом данных.
     </div>
 </body>
 </html>
